manifests/backend.yml
apiVersion: v1
kind: Pod
namespace: app
metadata:
  labels:
    name: backend
  name: backend
spec:
  containers:
  - name: backend-container
    image: acrfastreactdevweuh2ww2.azurecr.io/app/backend:latest
    ports:
    - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
