manifests/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - name: backend-container
    image: acr.io/app/backend:latest
    ports:
    - containerPort: 8080

  - name: frontend-container
    image: acr.io/app/frontend:latest
    ports:
    - containerPort: 80

  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
