manifests/svc-frontend.yml
kind: Service
apiVersion: v1

metadata:
  namespace: app
  name: frontend-container-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-pip-name: myAKSPublicIPForIngress
spec:
  selector:
    name: frontend
  ports:
  - port: 80 # Default port for image
    targetPort: 80
---
# svc-backend.yml
kind: Service
apiVersion: v1
metadata:
  namespace: app
  name: backend-container-service
spec:
  selector:
    name: backend
  ports:
  - port: 8080 # Default port for image
    targetPort: 8080
