manifests/svc-public.yml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-ipv4: 20.73.52.19
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    name: frontend
