manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: health-data.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /app
        backend:
          service:
            name: frontend-container-service
            port:
              number: 3000
        pathType: Exact
      - path: /api
        backend:
          service:
            name: backend-container-service
            port:
              number: 8080
        pathType: Exact
